--- a/dci-2.0/src/app/focus-infobox/focus-infobox.component.scss
+++ b/dci-2.0/src/app/focus-infobox/focus-infobox.component.scss
@@ -3,7 +3,9 @@ div.focus {
     padding: 0px;
     background-color: white;
     z-index: 100;
-    width: 18vw;
+    width: 500px;
+    height: 520px;
+    overflow: scroll-y;
     .close {
         border: none;
         position: absolute;
@@ -28,11 +30,11 @@ div.focus {
         .titledev {
             padding: 0px 0px 10px 80px;
             .title {
-                font-size: 18pt;
+                font-size: 16pt;
                 font-weight: bold;
             }
             .developer {
-                font-size: 16pt;
+                font-size: 12pt;
             }
             margin-bottom:1em;
         }
